--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,7 +1,7 @@
 .person{
-    width: 40%;
+    width: 50%;
     margin: 16px auto;
-    border: 1px solid #eee;
+    border: 1px solid rgb(196, 10, 10);
     box-shadow: 0 2px 3px #ccc;
     padding: 16px;
     text-align: center;
